<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Immi App</string>
    <string name="search">Search</string>
    <string name="add">Add</string>

    <string name="title">Title</string>
    <string name="description">Description</string>
    <string name="location">Location</string>
    <string name="date">Date</string>
    <string name="time">Time</string>
    <string name="category">Category</string>

    <string name="edit">Edit</string>
    <string name="delete">Delete</string>

    <string name="defTime">Insert Time</string>
    <string name="defDate">Insert Date</string>
    <string name="defCategory">Choose Category</string>

    <string-array name="category_arrays">
        <item>Music</item>
        <item>Art and Film</item>
        <item>Food and Drinks</item>
        <item>Sports</item>
        <item>Academic</item>
        <item>Games</item>
        <item>Miscellaneous</item>
    </string-array>

    <string name="save">Save</string>
    <string name="alert">* Required fields</string>

    <string name="average">Average</string>





    <string name="account_settings">Account Settings</string>
    <string name="account_preferences">Account Preferences</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="user_name">User Name</string>
    <string name="password">Password</string>
    <string name="password_confirm">Confirm Password</string>
    <string name="email">Email</string>
    <string name="birthday">Birthday</string>
    <string name="done">Done</string>
    <string name="cancel">Cancel</string>
    <string name="hello_world">Hello world!</string>
    <string name="AppTitle">Immi</string>
    <string name="login_button">Login</string>
    <string name="signup_button">Sign Up</string>
    <string name="action_settings">Settings</string>

    <string name="title_activity_login">Login</string>
    <string name="title_activity_signup">Login</string>
    <string name="title_activity_preferences">Preferences</string>
    <string name="title_activity_home">Home</string>

    <string name="facebook_login">Login with Facebook</string>

    <string name="filter">Filter</string>
    <string name="radius">Radius</string>

    <string name="music">Music</string>
    <string name="art_and_film">Art and Film</string>
    <string name="food_and_drinks">Food and Drinks</string>
    <string name="sports">Sports</string>
    <string name="academic">Academic</string>
    <string name="games">Games</string>
    <string name="miscellaneous">Miscellaneous</string>
    <string name="check_all">Check All</string>
    <string name="five_miles">&lt; 5 miles</string>
    <string name="ten_miles">&lt; 10 miles</string>
    <string name="thirty_miles">&lt; 30 miles</string>

    <string name="home_tab">Home</string>
    <string name="filter_tab">Filter</string>
    <string name="me_tab">Me</string>
    <string name="more_tab">More</string>

    <string name="action_points">Pts</string>
    <string name="action_today">Today</string>
    <string name="action_three_days">3 Days</string>
    <string name="action_week">Week</string>

    <string name="action_preferences">Preferences</string>
    <string name="action_search">Search</string>
    <string name="title_activity_me">MeActivity</string>

<!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="about_immi">Immi is an event planning and finding social media app. It\'s main focus is finding local events near you.</string>
    <string name="contact_us">Send us an email at noemailyet@nonexistent.net</string>
    <string name="immi_points_explanation">Immi points track your popularity in our app. Events, up-votes, attendance, and more can raise your score.</string>

</resources>
