<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="20dp"
    android:weightSum="1"
    android:background="#FFFFFF">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/account_settings"
        android:textSize="30sp"
        android:gravity="center"
        android:text="@string/account_settings"
        android:layout_weight="0.4"
        android:textColor="#000" />

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_weight="0.4"
        android:weightSum="1">


        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:ems="10"
            android:id="@+id/first_name"
            android:layout_gravity="center_horizontal"
            android:gravity="center_horizontal"
            android:hint="@string/first_name" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:layout_gravity="center_horizontal"
            android:gravity="center_horizontal"
            android:hint="@string/last_name"
            android:ems="10"
            android:id="@+id/last_name" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:layout_gravity="center_horizontal"
            android:gravity="center_horizontal"
            android:hint="@string/user_name"
            android:ems="10"
            android:id="@+id/user_name" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:layout_gravity="center_horizontal"
            android:gravity="center_horizontal"
            android:hint="@string/password"
            android:ems="10"
            android:id="@+id/password" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:layout_gravity="center_horizontal"
            android:gravity="center_horizontal"
            android:hint="@string/password_confirm"
            android:ems="10"
            android:id="@+id/password_confirm" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:layout_gravity="center_horizontal"
            android:gravity="center_horizontal"
            android:hint="@string/email"
            android:ems="10"
            android:id="@+id/email" />

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:gravity="center_horizontal"
                android:inputType="date"
                android:ems="10"
                android:id="@+id/date"
                android:layout_weight="1" />

        </LinearLayout>

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal">

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/done"
                android:text="@string/done"
                android:gravity="center_vertical|center|center_horizontal"
                android:background="#5FFFCE" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/cancel"
                android:text="@string/cancel"
                android:gravity="center_vertical|center|center_horizontal"
                android:background="#ffbbffdb" />

            </LinearLayout>


    </LinearLayout>


</LinearLayout>