<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="20dp"
    android:weightSum="1"
    android:background="#ffffffff">

    <ImageView
        android:layout_width="160dp"
        android:layout_height="186dp"
        android:id="@+id/login_image"
        android:textSize="30sp"
        android:gravity="center"
        android:src="@drawable/market_immi"
        android:layout_gravity="center_horizontal" />

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_weight="0.4"
        android:weightSum="1">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:layout_gravity="center_horizontal"
            android:gravity="center_horizontal"
            android:hint="@string/user_name"
            android:ems="10"
            android:id="@+id/user_name" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:layout_gravity="center_horizontal"
            android:gravity="center_horizontal"
            android:hint="@string/password"
            android:ems="10"
            android:id="@+id/password" />

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal">

                <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/loginButton"
                    android:text="@string/login_button"
                    android:layout_weight="1"
                    android:background="#5FFFCE" />

                <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/signupButton"
                    android:text="@string/signup_button"
                    android:layout_weight="1"
                    android:background="#5FFFCE" />

            </LinearLayout>

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/facebookLogin"
                android:text="@string/facebook_login"
                android:background="#3b5998" />

        </LinearLayout>

    </LinearLayout>


</LinearLayout>